@@ -1,3 +1,4 @@
+Removed the phet logo to save vertical space on the control panel
 Fixed: In real modes, velocities should not be draggable
 Fixed: In real modes, bodies should not be draggable
 Fixed: forces not visible in Sun, Earth, Moon mode
